[tool.poetry]
name = "bot"
version = "0.1.0"
description = "HW 15 Telegram Bot"
authors = ["Vasily Korovin <vskorovin@gmail.com>"]
license = "Free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
